specs/blueprints/errors/parsing/embed_without_key.eno
# An embed without a key

-- input
--
value
-- input

## ParseError

-- text
The embed in line 1 has no key.
-- text

-- snippet
   Line | Content
 >    1 | --
      2 | value
-- snippet

selection: [0,2] => [0,2]
